# soya-insights

./: .gitignore  =0.11.0  =1.0.0  =1.21.0  =1.3.0  =1.5.0  =3.5.0  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  Soya_Insights.py  app.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup_xgboost_env.py  start.sh  utils.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
data/: Seguimiento de datos.xlsx  datos_gdt_protein.csv  datos_seguimiento_granos.csv
models/: acidez_oil.py  create_shap_beeswarm_corporativo.py  create_shap_distribution.py  predict_acidez.py  soluble_protein.py  train_acidez_model.py
models/artifacts/: metrics_acidez.json  model_info_acidez.json  random_forest_acidez.pkl  shap_values_acidez.json  tree_rules_acidez.txt
models/data/: data_acidez.csv
pages/: 1_Modelo_Degradacion.py  1_Modelo_Degradación.py  2_Modelo_Acidez.py  3_Modelo_Proteina.py  3_Modelo_Proteína_Soluble.py
src/: __init__.py
src/components/: __init__.py  metrics_display.py
src/config/: __init__.py  constants.py
src/models/: __init__.py
src/services/: __init__.py  data_service.py  model_service.py
src/utils/: __init__.py  calculations.py  regression_utils.py
xgboost_env/: pyvenv.cfg
