[project]
name = "soya-insights"
version = "0.1.0"
description = "Análisis de degradación de granos de soya y su impacto en productos derivados"
authors = [
    {name = "Juan David Rincón", email = "juan@okuo-analytics.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.32.0",
    "pandas==2.1.4",
    "plotly==5.18.0",
    "numpy==1.24.3",
    "joblib==1.3.2",
    "scikit-learn==1.3.2",
    "shap==0.44.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "scipy==1.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
    "Soya_Insights.py",
    "README.md",
    "data/",
    "imagenes/",
    "models/",
    "pages/",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 